Minor heading css tweak.

--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -264,7 +264,7 @@ footer
     background-image: cover
 
   .intro-starts
-    letter-spacing: .85em
+    letter-spacing: 2px
     padding-left: .85em
     font-size: 26px
     margin-top: 2%
