--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -216,7 +216,7 @@ a
 // ---- Footer
 
 footer
-  margin: 30px 0
+  margin: 30px 0 10px 0
   padding: 20px 0px
   overflow: hidden
 
@@ -246,6 +246,10 @@ footer
   margin: 12px 15px
   float: left
 
+
+#languages
+  float: right
+  margin-bottom: 20px
 
 // ------------------------- Mobile styles
 
@@ -535,7 +539,7 @@ footer
   footer
     width: 80%
     padding: 0 5%
-    margin: 0px 5% 40px
+    margin: 0px 5% 20px
     background-color: #435971
     border-radius: 5px
     overflow: hidden
@@ -552,4 +556,9 @@ footer
     .ad-copy
       padding: 10px 10px 15px 1px
       background-color: none
+
+  #languages
+    width: 90%
+    margin: 0px 5% 10px 5%
+    text-align: right
 
