Display date countdown for english locale only (for now).

--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -133,7 +133,7 @@ a
 // ---- Ticker
 
 #counter
-  margin-top: 75px
+  margin: 50px 0
   overflow: hidden
   background: image-url("campaigns/100m/ticker-commas.png") no-repeat center 100px
 
@@ -170,7 +170,7 @@ a
 
 #date_countdown
   clear: both
-  margin: 110px auto 0
+  margin: 50px auto 0
   overflow: hidden
   width: 663px
   color: #96999D
@@ -389,8 +389,7 @@ footer
   #counter
     background-position: 0px 30px
     background-size: 100%
-    margin: 0 auto
-    margin-top: 20px
+    margin: 20px auto
 
     .part
       margin-left: 4%
@@ -501,7 +500,6 @@ footer
   // ---- Counter
 
   #counter
-    margin-top: 20px
     background-position: 0px 30px
     background-size: 100%
     width: auto
