--- a/app/views/campaigns/100million.html.haml
+++ b/app/views/campaigns/100million.html.haml
@@ -65,9 +65,6 @@
       #counter-divider
         = image_tag "campaigns/100m/ticker-divider.png"
 
-      #date_countdown
-
-      -# Day counter
       :javascript
 
         function colonize(nStr)
@@ -108,6 +105,21 @@
           $.getScript('http://installs.youversion.com/stats_jsonp.js');
 
         })();
+
+      - if current_locale.to_s == "en"
+
+        #date_countdown
+
+        -# Day counter
+        :javascript
+
+          (function() {
+
+            var timestamp = 1373529600;
+            var deadline  = new Date( timestamp * 1000);
+            $('#date_countdown').countdown({until: deadline});
+
+          })();
 
 
       -# Video
