--- a/app/views/sidebars/references/_show.html.haml
+++ b/app/views/sidebars/references/_show.html.haml
@@ -6,8 +6,10 @@
   locale = I18n.locale.to_s
   ajax_url = (locale == "en") ? "/bible/widgets/bookmarks" : "/#{locale}/bible/widgets/bookmarks"
 
-
-= render '/campaigns/ad_100m' #render '/widgets/reader_help'
+- if locale == "en"
+  = render '/campaigns/ad_100m' #render '/widgets/reader_help'
+- else
+  = render '/widgets/reader_help'
 
 - if current_auth #only show bookmarks widget if authed
   #widget-bookmarks.widget.ajax_bookmarks{"data-ajax" => ajax_url}
