New strings, enabling 100m banner for all localizations, update banner to work properly with localizations, etc.

--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -507,6 +507,29 @@ html.mobile-client
     top: 0
     left: 0
 
+  h2
+    width: 300px
+    position: absolute
+    top: 18px
+    text-align: center
+    color: #FECC0E
+    text-transform: uppercase
+    letter-spacing: .35em
+    font-size: 12px
+    font-weight: normal
+
+    em
+      letter-spacing: normal
+      display: block
+      color: #435971
+      font:
+        size: 40px
+        style: normal
+        weight: normal
+        family: 'Fjalla One', Helvetica, sans-serif
+      line-height: 1em
+      margin-top: 12px
+
   .cta-100m
     position: absolute
     top: 180px
