--- a/app/views/campaigns/_ad_100m.html.haml
+++ b/app/views/campaigns/_ad_100m.html.haml
@@ -1,5 +1,6 @@
 #widget-100m-ad
   = image_tag "campaigns/100m/ad.png", size: "300x270", alt: t("campaigns.100m.sidebar.button")
+  %h2= t("campaigns.100m.tagline").html_safe
   .cta-100m
     %span
       = t("campaigns.100m.sidebar.tagline")
