Load Gapi fonts for correct protocol.

--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -25,7 +25,7 @@
     %meta{name: "twitter:app:url:googleplay",   content: deep_link }
     %link{rel:  "canonical", href: bible_url(reference)}
 
-  %link{href: "http://fonts.googleapis.com/css?family=Fjalla+One&subset=latin,cyrillic-ext,cyrillic,greek-ext,vietnamese,latin-ext", rel: "stylesheet", type: "text/css"}
+  %link{href: "//fonts.googleapis.com/css?family=Fjalla+One&subset=latin,cyrillic-ext,cyrillic,greek-ext,vietnamese,latin-ext", rel: "stylesheet", type: "text/css"}
 
 
 
