Update home page download link to point to bible.com/app.

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -84,7 +84,7 @@
             %p &nbsp;
             %p= t(".world installs")
         %div.mobile_platforms
-          = link_to(t(".download action"), 'http://youversion.com/download')
+          = link_to(t(".download action"), 'http://bible.com/app')
 
 - content_for :javascripts do
   :javascript
