Locale included in 100m ad link.

--- a/app/views/campaigns/_ad_100m.html.haml
+++ b/app/views/campaigns/_ad_100m.html.haml
@@ -4,5 +4,5 @@
   .cta-100m
     %span
       = t("campaigns.100m.sidebar.tagline")
-    %a{href: "http://bible.com/100million", class:"action_button_green"}
+    %a{href: "http://bible.com/#{I18n.locale.to_s}/100million", class:"action_button_green"}
       = t("campaigns.100m.sidebar.button")
