--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -303,542 +303,6 @@
   .dynamic_menu.version_select th a
     min-width: 4em
 
-  // ---------- Pages
-
-  // -------------Donate page
-  // Note: Styles for the "Donate Now" button are combined
-  // with the sidebar button styles, in _sidebar.sass
-
-
-  #main article.donate
-    padding-bottom: 0
-    padding-top: 16px
-    background: none
-    h1
-      line-height: 1em
-      float: none !important
-      width: auto
-      display: block
-
-    .callout
-      background: none
-      padding-left: 0
-
-    .intl
-      padding-top: 8px
-
-    .action_button_green
-      .icon_arrow
-        background-image: none
-        padding: 0
-
-  #main article.donate
-    #donate_now_wrap
-      margin-bottom: 15px
-      text-align: right
-      float: none
-      width: auto
-
-      .intl
-        text-align: center
-        display: block
-        font-weight: bold
-
-        &:link
-          text-decoration: none
-        &:hover
-          text-decoration: underline
-
-    p.narrow
-      width: auto
-
-  #main article.donate
-    .float_left
-      float: none !important
-
-    div
-      padding-left: 0 !important
-
-    input[name="tr[city]"], input[name="tr[email]"], select[name="tr[state]"]
-      margin-bottom: 10px
-
-  #main article.donate
-    .emphasis + label,
-    input + label,
-    select + label
-      display: block
-
-    input.address
-      width: 100%
-
-  //  label
-  //    margin-top: 16px
-
-    label[for="tr_x_email_customer"]
-      margin-top: 0
-
-    div
-      button[action="submit"]
-        margin-top: 2em
-        margin-bottom: 2em
-
-    select#tr_x_state
-      margin-top: 0
-
-  // -------------About page
-
-  .partners_content .partners_box
-    margin: 0 0 24px 0
-    div
-      margin: 0
-      padding: 0
-      text-align: center
-      img
-        border: 1px solid #F4F4F4
-        width: 100%
-
-  // -------------Press page
-
-  #main article.press
-    .press_resources
-    ul
-      margin-top: 0
-      li
-        margin: 0
-        padding: 0
-        background: none
-        padding-top: 20px
-        h4
-          line-height: 20px
-          margin-bottom: 4px
-        a
-          font-weight: bold
-          text-decoration: none
-        p
-          line-height: 20px
-          margin: 0
-      li:first-child
-        padding-top: 0
-    img[alt="Press_image"]
-      width: 100%
-
-  // -------------Mobile page
-
-  #main article.mobileapps
-    font-size: 13px
-    line-height: 1.7
-    background: none
-    padding-top: 20px
-
-    #mobile_content
-      overflow: hidden
-      margin-bottom: 10px
-      width: auto
-      float: none !important
-      h1
-        line-height: 1.18em
-
-    #mobile_content
-      .main
-        width: 46%
-        padding-right: 4%
-        float: left
-        line-height: 1.45em
-        p
-          margin-bottom: 10px
-
-    #mobile_content
-      .multilingual
-        float: right
-        text-align: center
-        padding: 0 0 0 4%
-        width: 45%
-        border-left: 1px solid #e1e1e1
-
-        p
-          font-size: 13px
-          line-height: 1.4
-        h3
-          font-size: 12px
-          margin: 0 0 5px 0
-
-  #mobile_downloads
-    float: none !important
-    width: auto
-    padding: 0
-    border-left: 0
-
-    .left_column
-      float: left
-      width: 50%
-    .right_column
-      float: left
-      padding-left: 10px
-      width: 46%
-
-  #mobile_downloads a.cta
-    background: image-url("mobile_download.png") 14px center no-repeat #81a951 !important
-    display: block
-    padding: 15px 15px 12px 54px
-    border-radius: 4px
-    border: 1px #607346 solid
-    box-shadow: inset 0px 1px 0px rgba(#fff, .3)
-    overflow: hidden
-    clear: both
-
-    img
-      display: none
-  a.cta h3
-    margin-bottom: 0
-
-  #main section.testimonials ul li
-    padding: 5px 20px 10px 35px
-    margin: 0 0 10px
-    background: image-url("mobile_quote.png") no-repeat top left
-    float: none
-    width: auto
-    border-right: 0
-
-
-  // ----------------- Reading plans
-
-  #main #subscriptions-index
-
-    h1
-      font:
-        size: 15px
-        weight: normal
-      color: #666
-
-    form
-      .faux_checkbox
-        float: left
-        margin: 8px 10px 0px 10px
-
-
-    ul
-      margin-bottom: 0
-
-    p
-      margin-bottom: 0
-      font-size: 15px
-      line-height: 1.4em
-
-    .progress_counter
-      width: 100%
-      text-align: left
-      position: relative
-      height: auto
-      line-height: auto
-      top: -16px
-
-    .progress_wrap
-      width: 95%
-      height: 55px
-      padding: 0
-      background: none
-      margin-bottom: 0
-
-    .progress_bar_outer
-      left: 7px
-      width: 100%
-
-    .progress_percent_complete
-      display: none
-
-    .progress_date
-      @extend .clearfix
-      width: 12%
-      float: left
-      padding: 10px 2% 0
-
-      p:first-child
-        font-size: 12px
-        color: #aaa
-
-      p
-        text-align: center
-        font-size: 13px
-        font-weight: bold
-
-      p:first-child, p:last-child
-        font-weight: normal
-
-    .plan_search
-      padding: 0 20px 20px
-      border-bottom: 1px solid #CCC
-      margin-top: 10px
-      +box-shadow(rgba(#000, 0.08) 0 2px 4px 0)
-
-    .plan_length
-      background: image-url("rp_calendar_icon.png") left center no-repeat
-      padding-left: 20px
-      color: #999
-      font-weight: bold
-
-    .plan_about
-      display: block
-      float: right
-      height: 44px
-      width: 20%
-      background: image-url("icon_small_about.png") top center no-repeat
-      text-indent: 100%
-      white-space: nowrap
-      overflow: hidden
-
-    .about_length
-      width: 50%
-      background: image-url("rp_about_calendar.gif") 24px center no-repeat
-
-    .about_users
-      width: 49.7%
-      background: image-url("rp_about_users.png") 24px center no-repeat
-      border-left: 1px solid #d9d9d9
-
-    .about_users, .about_length
-      float: left
-      height: 51px
-      border-bottom: 1px solid #d9d9d9
-      span, strong
-        margin-left: 68px
-        display: block
-      strong
-        font-size: 11px
-        color: #999
-        margin: 6px 0 -6px 68px
-
-    .about
-      padding: 20px 20px 0 20px
-
-    .action_button_green,
-    .action_button_grey,
-    .action_button_red
-      margin-top: 20px
-
-    input[type="submit"].action_button_green,
-    input[type="submit"].action_button_grey,
-    input[type="submit"].action_button_red,
-      width: 100%
-
-    .action_button_red.confirm
-      margin-bottom: 20px
-
-      div
-        text-align: center
-        margin: 0 auto
-        padding-right: 10px
-
-      h4
-        margin-bottom: 0
-        margin-top: -4px
-
-    .split_pane .content
-      .devo_content
-        padding: 0 20px
-        p
-          margin-bottom: 12px
-
-    table:first-child
-      margin-top: 20px
-
-
-  // ----------------- Video pages
-  #videos-index
-
-  ul.videos
-
-    li
-      width: auto !important
-      padding: 1% !important
-      margin: 0px 0px 30px !important
-      background: none !important
-
-      img
-        display:block
-        width: 100%
-
-      .info
-        overflow: auto
-        position: relative
-        color: #666
-        padding: 4px 10px 0
-
-      .publisher
-        padding-left: 22px
-        background: image-url("icon_small_about.png") no-repeat 0px center
-        color: #777
-        display: block
-
-  #video-series
-    article
-      background: none !important
-
-      #title-bar
-        display: none !important
-
-      .publisher
-        a
-          text-decoration: none
-          color: #aaa
-          margin-bottom: 10px
-          display: block
-
-        a:hover
-          color: $blue
-
-    ul#episodes
-      margin-left: 0px
-
-      li
-        background: none !important
-        padding-left: 0px !important
-
-        a
-          img
-            display: block
-            width: 100%
-
-            .info
-              h3
-                margin-bottom: 10px
-
-  #video-show
-    #title-bar
-      h1
-        display: none !important
-
-      .share
-        top: -5px
-
-      .share_panel
-        top: 50px
-
-    #player_wrapper
-      width: 100% !important
-      height: 200px !important
-      margin-bottom: 20px
-
-    .inner
-      padding: 0px !important
-      width: auto
-
-      #details
-        width: auto
-
-      #other
-        width: auto
-        padding: 0px
-        float: none
-
-        a
-          margin-bottom: 30px
-          clear: both
-          padding: 10px 0px !important
-
-        .pub-banner
-          width: 100%
-
-  .about_content
-    padding-right: 0px
-    background: none
-
-  #beta-banner
-    overflow: hidden
-    height: 20px
-    padding: 2px 10px 7px
-    background: #81a951
-    background: -moz-linear-gradient(top,  #81a951 0%, #679037 100%)
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#81a951), color-stop(100%,#679037))
-    background: -webkit-linear-gradient(top,  #81a951 0%,#679037 100%)
-    background: -o-linear-gradient(top,  #81a951 0%,#679037 100%)
-    background: -ms-linear-gradient(top,  #81a951 0%,#679037 100%)
-    background: linear-gradient(top,  #81a951 0%,#679037 100%)
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#81a951', endColorstr='#679037',GradientType=0 )
-
-    span
-      display: block
-      float: left
-      color: #fff !important
-      font-weight: bold
-
-    a
-      display: block
-      float: right
-      color: #fff !important
-      font-weight: bold
-      text-decoration: none
-
-    a:hover
-      text-decoration: underline
-
-  // ----------------- Single verse page
-
-  #header
-    a
-      display: block
-    a.logo
-      height: 44px
-      width: 150px
-      background: image-url('yv_logo.png') left 11px no-repeat
-      overflow: hidden
-      text-indent: 100%
-      white-space: nowrap
-      margin-left: 20px
-      float: left
-    .get_app
-      height: 34px
-      color: #fff
-      text-decoration: underline
-      float: right
-      margin-right: 20px
-      font-size: 13px
-      padding-top: 10px
-      width: 35%
-      text-align: right
-      line-height: 1.2em
-
-  section.single_verse
-    margin: 12px
-    border: 1px solid #e1e1e1
-    padding: 20px
-    text-align: center
-    +border-radius(10px)
-
-    h3
-      color: #808080
-      margin-bottom: 4px
-
-    p
-      font-size: 37px
-      line-height: 1.3em
-      letter-spacing: -.03em
-
-    h3 + p
-      font-size: 12px
-      color: #808080
-      letter-spacing: none
-
-  .flash_notice
-    background:
-      color: #d9e4c9
-      image: image-url("flash_notice.png")
-    border-color: #91b164
-    color: #4b7518
-    width: 100%
-    top: 47px
-    left: 0px
-    position: absolute
-    border-radius: 0px
-    margin: 0px
-    opacity: 1
-    box-shadow: none
-    z-index: 100000
-
-  #flash_error
-    width: 100%
-    border-radius: 0px
-    margin-left: 0px
-
   // -------------Button stuff
   input[type="submit"]
     background-color: #81a950
@@ -882,3 +346,4 @@
   @import mobile/pages
   @import mobile/donate
   @import mobile/user
+  @import mobile/videos
