--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -37,7 +37,7 @@
 
 // -------------Mobile page
 
-#main article.mobile
+#main article.mobileapps
   font-size: 13px
   line-height: 1.7
   background: none
@@ -112,11 +112,154 @@ a.cta h3
   width: auto
   border-right: 0
 
+// ----------------- Reading plans
+
+#main #subscriptions-index
+
+  h1
+    font:
+      size: 15px
+      weight: normal
+    color: #666
+
+  form
+    .faux_checkbox
+      float: left
+      margin: 8px 10px 0px 10px
+
+
+  ul
+    margin-bottom: 0
+
+  p
+    margin-bottom: 0
+    font-size: 15px
+    line-height: 1.4em
+
+  .progress_counter
+    width: 100%
+    text-align: left
+    position: relative
+    height: auto
+    line-height: auto
+    top: -16px
+
+  .progress_wrap
+    width: 95%
+    height: 55px
+    padding: 0
+    background: none
+    margin-bottom: 0
+
+  .progress_bar_outer
+    left: 7px
+    width: 100%
+
+  .progress_percent_complete
+    display: none
+
+  .progress_date
+    @extend .clearfix
+    width: 12%
+    float: left
+    padding: 10px 2% 0
+
+    p:first-child
+      font-size: 12px
+      color: #aaa
+
+    p
+      text-align: center
+      font-size: 13px
+      font-weight: bold
+
+    p:first-child, p:last-child
+      font-weight: normal
+
+  .plan_search
+    padding: 0 20px 20px
+    border-bottom: 1px solid #CCC
+    margin-top: 10px
+    +box-shadow(rgba(#000, 0.08) 0 2px 4px 0)
+
+  .plan_length
+    background: image-url("rp_calendar_icon.png") left center no-repeat
+    padding-left: 20px
+    color: #999
+    font-weight: bold
+
+  .plan_about
+    display: block
+    float: right
+    height: 44px
+    width: 20%
+    background: image-url("icon_small_about.png") top center no-repeat
+    text-indent: 100%
+    white-space: nowrap
+    overflow: hidden
+
+  .about_length
+    width: 50%
+    background: image-url("rp_about_calendar.gif") 24px center no-repeat
+
+  .about_users
+    width: 49.7%
+    background: image-url("rp_about_users.png") 24px center no-repeat
+    border-left: 1px solid #d9d9d9
+
+  .about_users, .about_length
+    float: left
+    height: 51px
+    border-bottom: 1px solid #d9d9d9
+    span, strong
+      margin-left: 68px
+      display: block
+    strong
+      font-size: 11px
+      color: #999
+      margin: 6px 0 -6px 68px
+
+  .about
+    padding: 20px 20px 0 20px
+
+  .action_button_green,
+  .action_button_grey,
+  .action_button_red
+    margin-top: 20px
+
+  input[type="submit"].action_button_green,
+  input[type="submit"].action_button_grey,
+  input[type="submit"].action_button_red,
+    width: 100%
+
+  .action_button_red.confirm
+    margin-bottom: 20px
+
+    div
+      text-align: center
+      margin: 0 auto
+      padding-right: 10px
+
+    h4
+      margin-bottom: 0
+      margin-top: -4px
+
+  .split_pane .content
+    .devo_content
+      padding: 0 20px
+      p
+        margin-bottom: 12px
+
+  table:first-child
+    margin-top: 20px
+
 
 // ----------------- Reading plans
 
 #subscriptions-index,
 #main article#plan-index
+
+  padding: 0
 
   hr
     margin: 20px 0px
@@ -288,64 +431,70 @@ a.cta h3
         left: 0
         right: 0
 
-// ----------------- Single verse page
+  // ----------------- Single verse page
 
-#header
-  a
-    display: block
-  a.logo
-    height: 44px
-    width: 150px
-    background: image-url('yv_logo.png') left 11px no-repeat
-    overflow: hidden
-    text-indent: 100%
-    white-space: nowrap
-    margin-left: 20px
-    float: left
-  .get_app
-    height: 34px
-    color: #fff
-    text-decoration: underline
-    float: right
-    margin-right: 20px
-    font-size: 13px
-    padding-top: 10px
-    width: 35%
-    text-align: right
-    line-height: 1.2em
+  #header
+    a
+      display: block
+    a.logo
+      height: 44px
+      width: 150px
+      background: image-url('yv_logo.png') left 11px no-repeat
+      overflow: hidden
+      text-indent: 100%
+      white-space: nowrap
+      margin-left: 20px
+      float: left
+    .get_app
+      height: 34px
+      color: #fff
+      text-decoration: underline
+      float: right
+      margin-right: 20px
+      font-size: 13px
+      padding-top: 10px
+      width: 35%
+      text-align: right
+      line-height: 1.2em
 
-section.single_verse
-  margin: 12px
-  border: 1px solid #e1e1e1
-  padding: 20px
-  text-align: center
-  +border-radius(10px)
+  section.single_verse
+    margin: 12px
+    border: 1px solid #e1e1e1
+    padding: 20px
+    text-align: center
+    +border-radius(10px)
 
-  h3
-    color: #808080
-    margin-bottom: 4px
+    h3
+      color: #808080
+      margin-bottom: 4px
 
-  p
-    font-size: 37px
-    line-height: 1.3em
-    letter-spacing: -.03em
+    p
+      font-size: 37px
+      line-height: 1.3em
+      letter-spacing: -.03em
 
-  h3 + p
-    font-size: 12px
-    color: #808080
-    letter-spacing: none
+    h3 + p
+      font-size: 12px
+      color: #808080
+      letter-spacing: none
 
-.flash_notice
-  background:
-    color: #d9e4c9
-    image: image-url("flash_notice.png")
-  border-color: #91b164
-  color: #4b7518
-  width: 100%
-  top: 47px
-  left: 0px
-  position: absolute
-  border-radius: 0px
-  margin: 0px
-  opacity: 1
-  box-shadow: none
+  .flash_notice
+    background:
+      color: #d9e4c9
+      image: image-url("flash_notice.png")
+    border-color: #91b164
+    color: #4b7518
+    width: 100%
+    top: 47px
+    left: 0px
+    position: absolute
+    border-radius: 0px
+    margin: 0px
+    opacity: 1
+    box-shadow: none
+    z-index: 100000
+
+  #flash_error
+    width: 100%
+    border-radius: 0px
+    margin-left: 0px
