Move download call-to-action higher on home page.

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -283,10 +283,11 @@ p
 #main article .bottom_cta
   background-color: #fff
   width: 100%
+  padding: 40px 0
 
   div
     width: 880px
-    margin: 40px auto 40px
+    margin: 0 auto
     overflow: hidden
     div
       float: left
