Mobile style tweaks for home page.

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -628,3 +628,17 @@ p
 @media only screen and (min-width: 481px)
   #main article .bottom_cta div:first-child p
     background: transparent !important
+
+@media only screen and (max-device-width: 320px)
+
+  #hero
+    min-height: auto
+
+  .hero_pics,
+  .bottom_cta h2,
+  .bottom_cta .counter,
+  #hero_content form,
+    display: none !important
+
+  .bottom_cta .mobile_platforms
+    margin-top: 2em !important
