Home page counter same as 100m.

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -305,6 +305,15 @@ p
     margin: 10px 20px 0 0
     padding-right: 20px
 
+  #counter .separator
+    background: none !important
+    height: auto !important
+    width: auto !important
+    margin: 0 !important
+    text-indent: 0 !important
+    color: #999 !important
+
+
   .counter
     float: left
     width: 260px
