Proper protocol for installs data.

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -164,7 +164,7 @@
     // Fire off request for download stats jsonp
     $(window).load(function() {
 
-      $.getScript('http://installs.youversion.com/stats_jsonp.js');
+      $.getScript('//installs.youversion.com/stats_jsonp.js');
       //$.getScript('https://s3.amazonaws.com/now.youversion.com/flurry.js');
 
       // Display signup form.
