Updating installs counter code for consistency.

--- a/app/views/campaigns/100million.html.haml
+++ b/app/views/campaigns/100million.html.haml
@@ -68,11 +68,10 @@
 
       :javascript
 
-        function colonize(nStr)
-        {
+        function commas(nStr) {
           nStr += '';
           var rgx = /(\d+)(\d{3})/;
-          while (rgx.test(nStr)) { nStr = nStr.replace(rgx, '$1' + ':' + '$2');}
+          while (rgx.test(nStr)) { nStr = nStr.replace(rgx, '$1' + ',' + '$2');}
           return nStr;
         }
 
@@ -83,23 +82,23 @@
           var start_count = STATS.start_count;
           var start_date = STATS.start_date;
           var average_per_day = STATS.average_per_day;
-
+          var single_pace = 1/(average_per_day/24/60/60)*1000;
           var today_date = Math.round((new Date()).getTime() / 1000);
           var date_difference_seconds = Math.abs(today_date - start_date);
-          var date_difference_days = Math.round(date_difference_seconds / 86400);
-          var corrected_total_downloads = Math.round(start_count + (average_per_day*date_difference_days));
+          var date_difference_days_not_round = (date_difference_seconds / 86400);
+          var corrected_total_downloads_not_round = Math.round(start_count + (average_per_day*date_difference_days_not_round));
 
           $("#counter").counter({
             direction: "up",
             format: "999:999:999",
-            stop: "100:000:000",
-            initial: colonize(corrected_total_downloads)
+            stop: "110:000:000",
+            initial: commas(corrected_total_downloads_not_round)
           });
 
         }
 
         (function() {
-          $.getScript('http://installs.youversion.com/stats_jsonp.js');
+          $.getScript('//commondatastorage.googleapis.com/installs.youversion.com/stats_jsonp.js');
         })();
 
       - if current_locale.to_s == "en"
