--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -109,17 +109,17 @@
       var start_count = STATS.start_count;
       var start_date = STATS.start_date;
       var average_per_day = STATS.average_per_day;
-
+      var single_pace = 1/(average_per_day/24/60/60)*1000;
       var today_date = Math.round((new Date()).getTime() / 1000);
       var date_difference_seconds = Math.abs(today_date - start_date);
-      var date_difference_days = Math.round(date_difference_seconds / 86400);
-      var corrected_total_downloads = Math.round(start_count + (average_per_day*date_difference_days));
+      var date_difference_days_not_round = (date_difference_seconds / 86400);
+      var corrected_total_downloads_not_round = Math.round(start_count + (average_per_day*date_difference_days_not_round));
 
       $("#counter").counter({
         direction: "up",
         format: "99,999,999",
-        stop: "100,000,000",
-        initial: commas(corrected_total_downloads)
+        stop: "110,000,000",
+        initial: commas(corrected_total_downloads_not_round)
       });
 
     }
