Added Typekit, tweaked some styles (hey, I'm a pixel nazi)

--- a/app/views/campaigns/100million.html.haml
+++ b/app/views/campaigns/100million.html.haml
@@ -21,6 +21,8 @@
     = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
     = javascript_include_tag "campaigns/100m/jquery.counter.js"
     = javascript_include_tag "campaigns/100m/jquery.countdown.min.js"
+    = javascript_include_tag "//use.typekit.net/mgk8ovf.js"
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     = render '/shared/google_analytics'
   %body
 
