--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -1,14 +1,3 @@
-@font-face
-  font-family: 'bebas_neueregular'
-  src: url('../fonts/bebasneue-webfont-webfont.eot')
-  src: url('../fonts/bebasneue-webfont-webfont.eot?#iefix') format('embedded-opentype')
-  src: url('../fonts/bebasneue-webfont-webfont.woff') format('woff')
-  src: url('../fonts/bebasneue-webfont-webfont.ttf') format('truetype')
-  src: url('../fonts/bebasneue-webfont-webfont.svg#bebas_neueregular') format('svg')
-  font-weight: normal
-  font-style: normal
-
-
 // ------------------------ Desktop styles
 
 body
@@ -63,6 +52,8 @@ a
   font-weight: normal
   text-align: center
   margin-top: 35px
+  position: relative
+  z-index: 9999
 
 .intro-starts em
   letter-spacing: normal
@@ -71,11 +62,9 @@ a
   text-align: center
   font:
     size: 140px
+    family: "gnuolane",sans-serif
     style: normal
-    weight: normal
-    family: 'Fjalla One', Helvetica, sans-serif
   line-height: 1em
-  margin-top: 10px
 
 .intro-title
   width: 90%
@@ -90,6 +79,9 @@ a
 
 .world-map
   width: 100%
+  position: relative
+  z-index: 1
+  margin-top: -50px
 
 // ---- Share buttons
 
@@ -172,14 +164,14 @@ a
     margin-left: 0
 
 #counter-divider
-  margin-top: -82px
+  margin: -132px 0 100px 0
 
 
 // ---- Counter
 
 #date_countdown
   clear: both
-  margin: 50px auto 0
+  margin: 100px auto 80px auto
   overflow: hidden
   width: 663px
   color: #96999D
@@ -203,7 +195,7 @@ a
 // ---- Video
 
 .video
-  margin-top: 70px
+  margin-top: 10px
   clear: both
   overflow: hidden
 
@@ -259,6 +251,9 @@ footer
 #languages
   float: right
   margin-bottom: 20px
+
+.select_wrap
+  margin-top: 5px
 
 // ------------------------- Mobile styles
 
