--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -470,13 +470,12 @@ footer
 
   .intro-starts
     letter-spacing: 0
-    font-size: 22px
-    margin-top: 10px
+    font-size: 16px
     padding-left: 0px
     line-height: 14px
 
     em
-      font-size: 45px
+      font-size: 55px
       margin-bottom: 20px
 
     span
@@ -485,6 +484,9 @@ footer
       text-align: center
       margin: 0 auto
       padding-left: 5%
+
+  .world-map
+    margin-top: -30px
 
   .intro-copy
     padding: 0px 20px
@@ -531,6 +533,11 @@ footer
   #counter-divider
     display: none
 
+  #date_countdown
+    font-size: 11px
+
+  // ---- Video
+
   .video-box
     iframe
       height: 280px
@@ -542,6 +549,12 @@ footer
     font-size: 14px
     float: none
     padding: 5% 5%
+
+    p
+      line-height: 1.5em
+      margin-bottom: 5%
+
+  // ---- Footer
 
   footer
     width: 80%
