Adjusting javascript for Typekit.

--- a/app/views/campaigns/100million.html.haml
+++ b/app/views/campaigns/100million.html.haml
@@ -22,7 +22,8 @@
     = javascript_include_tag "campaigns/100m/jquery.counter.js"
     = javascript_include_tag "campaigns/100m/jquery.countdown.min.js"
     = javascript_include_tag "//use.typekit.net/mgk8ovf.js"
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    :javascript
+      try{Typekit.load();}catch(e){}
     = render '/shared/google_analytics'
   %body
 
