Adjusting paypal logo to scale + non zero default for amount.

--- a/app/assets/stylesheets/donate.sass
+++ b/app/assets/stylesheets/donate.sass
@@ -87,10 +87,14 @@
       margin-top: 15px
 
     .donate_paypal_logo
+      width: auto
       text-align: center
       position: static !important
       margin: 15px
       top: none
       right: none
+
+      img
+        width: 100%
 
 
