Updated paypal notify url.

--- a/app/views/pages/donate.html.haml
+++ b/app/views/pages/donate.html.haml
@@ -19,7 +19,7 @@
       %input{type:"hidden", name: "business", value: "giving@lifechurch.tv"}
       %input{type:"hidden", name: "item_name", value: "YouVersion"}
       %input{type:"hidden", name: "currency_code", value: "USD"}
-      %input{type:"hidden", name: "notify_url", value: "https://bible.com/donate"}
+      %input{type:"hidden", name: "notify_url", value: "https://lifechurchtv.secure.force.com/pmtx/pymt__PayPalRelay"}
       %input{type:"hidden", name: "env", value: "www"}
 
       %input{type:"hidden", name: "p3", value: "24", class: "interval"}
