Added client side code and images for feed/home page. Darkened background color throughout app.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -256,6 +256,23 @@
     background-color: #555
 
 
+// Bookmark, reading plan, download, and group moments -- they share the same layout
+
+.moment-bm-text,
+.moment-rp-text,
+.moment-grp-text,
+.moment-dl-text,
+.moment-no-text,
+.moment-bdg-text,
+.moment-vid-text
+  font-size: 16px
+  float: left
+  width: 300px
+  padding: 5px 0 0 10px
+  line-height: 1.4em
+  margin-bottom: 0
+
+
 // Note moment
 
 .moment-no
