Added client side code and images for feed/home page. Darkened background color throughout app.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -43,7 +43,7 @@
 @import search
 @import resource_lists
 @import users
-
+@import social
 
 // ------------
 .mobile
@@ -353,3 +353,4 @@
   @import mobile/donate
   @import mobile/user
   @import mobile/videos
+  @import mobile/social
