--- a/app/assets/stylesheets/_global_html.sass
+++ b/app/assets/stylesheets/_global_html.sass
@@ -9,7 +9,7 @@ html
   overflow-y: scroll
 
 body
-  background: #f2f1ef image-url("body.png")
+  background: #DEDDDB
   color: $body_text
   min-width: 980px
 
