--- a/app/views/users/sign_up_success.html.haml
+++ b/app/views/users/sign_up_success.html.haml
@@ -2,4 +2,4 @@
   %h1= t('users.welcome to youversion')
   %h2= t('next step connections')
   %p= t('connection marketing')
-  = render partial: "connections"
+  = render partial: "connections/tabs"
