Catch and handle FB auth error for expired keys and present to the user, connections refactoring and optimization.

--- a/app/views/connections/index.html.haml
+++ b/app/views/connections/index.html.haml
@@ -3,6 +3,7 @@
 - content_for :title do
   = t('meta.connections.index.title')
 
+refactoring and optimization.
 - content_for :sidebar do
   = render partial: "widgets/settings"
 
